# AI_Sudoku

./: CMakeLists.txt  README.md
Boards/: board_0.txt  board_1.txt  board_2.txt
Boards1/: board_0.txt  board_1.txt  board_2.txt
src/: BTSolver.cpp  BTSolver.hpp  Trail.cpp  Trail.hpp  Variable.cpp  Variable.hpp
